name:                lndr-cli
version:             0.1.0.0
synopsis:            lndr terminal interface
description:         lndr terminal interface that interfaces with
                     lndr UCAC via an ethereum client
license:             BSD3
license-file:        LICENSE
author:              Roy Blankman
maintainer:          riblankman@gmail.com
copyright:           2017 Blockmason
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lndr.CLI.Actions
                     , Lndr.CLI.CmdLine
                     , Lndr.CLI.Config
  build-depends:       base >= 4.7 && < 5
                     , base64-bytestring 1.0.0.1
                     , bytestring
                     , cmdargs 0.10.20
                     , data-default
                     , dhall 1.8.0
                     , directory
                     , emailaddress 0.2.0.0
                     , ethereumhs-util 0.1.0.0
                     , filepath
                     , http-conduit 2.2.4
                     , lndr-backend 1.0.0
                     , postgresql-simple 0.5.3.0
                     , pretty-simple 2.0.2.0
                     , text 1.2.2.2
                     , web3 0.6.0.0
  default-language:    Haskell2010

executable lndr
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , lndr-cli 0.1.0.0
                     , aeson 1.2.4.0
                     , base16-bytestring 0.1.1.6
                     , bytestring
                     , cmdargs 0.10.20
                     , data-default
                     , dhall 1.8.0
                     , directory
                     , either 4.5
                     , emailaddress 0.2.0.0
                     , listsafe 0.1.0.1
                     , memory 0.14.11
                     , text 1.2.2.2
                     , web3 0.6.0.0
  default-language:    Haskell2010


test-suite server-cli-integration
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base >= 4.7 && < 5
                     , lndr-cli 0.1.0.0
                     , lndr-backend 1.0.0
                     , containers
                     , directory
                     , either 4.5
                     , emailaddress 0.2.0.0
                     , HUnit 1.6.0.0
                     , test-framework
                     , test-framework-hunit
                     , text 1.2.2.2
                     , transformers
                     , web3 0.6.0.0
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
